--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "date-fns": "^3.6.0",
     "lucide": "^0.407.0",
     "lucide-react": "^0.407.0",
-    "next": "14.2.4",
+    "next": "^14.2.13",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
